Tangent 2018 contract added

--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -301,6 +301,9 @@ blockquote {
 		}
 	}
 
+	#anders-jensen:before {background-image: url(/assets/images/portfolio/recommenders/anders-jensen.jpg);}
+	#louise-simpson:before {background-image: url(/assets/images/portfolio/recommenders/louise-simpson.jpg);}
+	#iustin-daniel-balta-cojocaru-stan:before {background-image: url(/assets/images/portfolio/recommenders/iustin-daniel-balta-cojocaru-stan.jpg);}
 	#martin-coyne:before {background-image: url(/assets/images/portfolio/recommenders/martin-coyne.jpg);}
 	#jason-hancock:before {background-image: url(/assets/images/portfolio/recommenders/jason-hancock.jpg);}
 	#lucy-harmer:before {background-image: url(/assets/images/portfolio/recommenders/lucy-harmer.jpg);}
