--- a/dev/src/components/linkedin-recommendations/pug/linkedin-recommendations.pug
+++ b/dev/src/components/linkedin-recommendations/pug/linkedin-recommendations.pug
@@ -12,7 +12,7 @@
 
 - 
 	function recommenationNameFormat(name){
-		return name.replace(' ', '-').toLowerCase();
+		return name.replace(/ /g, '-').toLowerCase();
 	}
 
 //- MIXINS
