--- a/dev/assets/scss/gallery.scss
+++ b/dev/assets/scss/gallery.scss
@@ -97,6 +97,12 @@ header {
 			font-size: inherit;
 		}
 	}
+
+	.thumbnail-listing h3 {
+		font-family: 'expert-sans-regular';
+		font-size: 1.5em;
+		letter-spacing: 0px;
+	}
 }
 
 // Global gallery styles (non-touch styles only)
@@ -507,14 +513,15 @@ body:not(.has-touch) {
 		> li {
 			@include border-radius(5px);
 			background: url(/assets/images/transparencies/ffffff/percent-5.png) repeat;
-			border: 1px solid rgba(#efefef, 0.05);
+			border: 1px solid rgba(#ffffff, 0.1);
 			box-sizing: border-box;
 			cursor: pointer;
 			padding-top: 0;
-			transition: background 250ms ease-in-out;
+			transition: background 250ms ease-in-out, border 250ms ease-in-out;
 
 			&:hover {
-				background-image: url(/assets/images/transparencies/dfebee/percent-30.png);
+				background-color: rgba(#92cddc, 0.5);
+				border-color: rgba(#92cddc, 0.3);
 			}
 
 			ul li {
