--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -302,6 +302,7 @@ blockquote {
 		}
 	}
 
+	#paul-finan:before {background-image: url(/assets/images/portfolio/recommenders/paul-finan.jpg);}
 	#anders-jensen:before {background-image: url(/assets/images/portfolio/recommenders/anders-jensen.jpg);}
 	#louise-simpson:before {background-image: url(/assets/images/portfolio/recommenders/louise-simpson.jpg);}
 	#iustin-daniel-balta-cojocaru-stan:before {background-image: url(/assets/images/portfolio/recommenders/iustin-daniel-balta-cojocaru-stan.jpg);}
