--- a/dev/views/cv.pug
+++ b/dev/views/cv.pug
@@ -100,7 +100,7 @@ html(prefix="og: http://ogp.me/ns#")
 									= section.experience.technologiesUsed.join(', ')
 
 							if section.experience.gitHubCodeSamples
-								a.github-project-code(href=section.experience.gitHubCodeSamples, target="_blank")= "View code samples from this project on GitHub"
+								a.github-project-code(href=section.experience.gitHubCodeSamples, target="_blank")= "View code samples from this contract on GitHub"
 
 							//- LinkedIn recommendations
 							if section.experience.linkedInRecommendations
