--- a/dev/assets/scss/gallery.scss
+++ b/dev/assets/scss/gallery.scss
@@ -316,11 +316,15 @@ body:not(.has-touch) {
 		}
 
 		a {
-			-webkit-transform: translateY(-50%);
 			display: inline-block;
 			position: relative;
 			top: 50%;	
 			transform: translateY(-50%);
+
+			&:focus,
+			&:hover {
+				background: rgba($white, 0.075);
+			}
 		}
 	}
 
@@ -454,8 +458,15 @@ body:not(.has-touch) {
 				float: left;				
 				height: 32px;
 
-				a:before {
-					transition: color 250ms ease-in-out;
+				a {
+					&:before {
+						transition: color 250ms ease-in-out;
+					}
+
+					&:focus,
+					&:hover {
+						background: none;
+					}
 				}
 
 				&.video a {
@@ -487,12 +498,20 @@ body:not(.has-touch) {
 						&:before {
 							color: $white;
 						}
+
+						&:focus:before,
+						&:hover:before {
+							color: $link-color;
+						}
 					}
 				}
 
-				&:not(.active) a:hover:before {
-					color: $link-color;
-					cursor: pointer;
+				&:not(.active) a {
+					&:focus:before,
+					&:hover:before {
+						color: $link-color;
+						cursor: pointer;
+					}
 				}
 
 				a {
