Added Lloyds contract to HTML CV

--- a/dev/assets/scss/gallery.scss
+++ b/dev/assets/scss/gallery.scss
@@ -125,7 +125,10 @@ body:not(.has-touch) {
 	    	}
 	    }
 
+		&:focus,
 		&:hover {
+			background: none;
+			
 			span {
 				background: $link-color;	
 
