--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -313,6 +313,8 @@ blockquote {
 		}
 	}
 
+	#dan-kupfer:before {background-image: url(/assets/images/portfolio/recommenders/dan-kupfer.jpg);}
+	#sam-kness:before {background-image: url(/assets/images/portfolio/recommenders/sam-kness.jpg);}
 	#paul-finan:before {background-image: url(/assets/images/portfolio/recommenders/paul-finan.jpg);}
 	#anders-jensen:before {background-image: url(/assets/images/portfolio/recommenders/anders-jensen.jpg);}
 	#louise-simpson:before {background-image: url(/assets/images/portfolio/recommenders/louise-simpson.jpg);}
