--- a/dev/assets/scss/videos.scss
+++ b/dev/assets/scss/videos.scss
@@ -82,6 +82,11 @@
 					text-overflow: ellipsis;
 					white-space: nowrap;				
 					max-width: 100%;
+
+					&:focus,
+					&:hover {
+						background: rgba($white, 0.075);
+					}
 				}
 
 				strong {
