Added new recommendation to CV

--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -313,6 +313,7 @@ blockquote {
 		}
 	}
 
+	#andrea-agueci:before {background-image: url(/assets/images/portfolio/recommenders/andrea-agueci.jpg);}
 	#dan-kupfer:before {background-image: url(/assets/images/portfolio/recommenders/dan-kupfer.jpg);}
 	#sam-kness:before {background-image: url(/assets/images/portfolio/recommenders/sam-kness.jpg);}
 	#paul-finan:before {background-image: url(/assets/images/portfolio/recommenders/paul-finan.jpg);}
