New recommendation added

--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -312,6 +312,7 @@ blockquote {
 		}
 	}
 
+	#sharif-macky:before {background-image: url(/assets/images/portfolio/recommenders/sharif-macky.jpg);}
 	#andrea-agueci:before {background-image: url(/assets/images/portfolio/recommenders/andrea-agueci.jpg);}
 	#dan-kupfer:before {background-image: url(/assets/images/portfolio/recommenders/dan-kupfer.jpg);}
 	#sam-kness:before {background-image: url(/assets/images/portfolio/recommenders/sam-kness.jpg);}
