Rehab contract added

--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -312,6 +312,8 @@ blockquote {
 		}
 	}
 
+	#zoe-calcott:before {background-image: url(/assets/images/portfolio/recommenders/zoe-calcott.jpg);}
+	#gary-button:before {background-image: url(/assets/images/portfolio/recommenders/gary-button.jpg);}
 	#sharif-macky:before {background-image: url(/assets/images/portfolio/recommenders/sharif-macky.jpg);}
 	#andrea-agueci:before {background-image: url(/assets/images/portfolio/recommenders/andrea-agueci.jpg);}
 	#dan-kupfer:before {background-image: url(/assets/images/portfolio/recommenders/dan-kupfer.jpg);}
