Updates to recommendations page

--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -318,6 +318,7 @@ blockquote {
 	#andrea-agueci:before {background-image: url(/assets/images/portfolio/recommenders/andrea-agueci.jpg);}
 	#dan-kupfer:before {background-image: url(/assets/images/portfolio/recommenders/dan-kupfer.jpg);}
 	#sam-kness:before {background-image: url(/assets/images/portfolio/recommenders/sam-kness.jpg);}
+	#richard-woods:before {background-image: url(/assets/images/portfolio/recommenders/richard-woods.jpg);}
 	#paul-finan:before {background-image: url(/assets/images/portfolio/recommenders/paul-finan.jpg);}
 	#anders-jensen:before {background-image: url(/assets/images/portfolio/recommenders/anders-jensen.jpg);}
 	#louise-simpson:before {background-image: url(/assets/images/portfolio/recommenders/louise-simpson.jpg);}
