New gallery added

--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -312,6 +312,12 @@ blockquote {
 		}
 	}
 
+	#alex-kickham:before {background-image: url(/assets/images/portfolio/recommenders/alex-kickham.jpg);}
+	#adam-scott:before {background-image: url(/assets/images/portfolio/recommenders/adam-scott.jpg);}
+	#eren-gokcek:before {background-image: url(/assets/images/portfolio/recommenders/eren-gokcek.jpg);}
+	#robin-lewis:before {background-image: url(/assets/images/portfolio/recommenders/robin-lewis.jpg);}
+	#todd-francis:before {background-image: url(/assets/images/portfolio/recommenders/todd-francis.jpg);}
+	#marta-moskwa:before {background-image: url(/assets/images/portfolio/recommenders/marta-moskwa.jpg);}
 	#zoe-calcott:before {background-image: url(/assets/images/portfolio/recommenders/zoe-calcott.jpg);}
 	#gary-button:before {background-image: url(/assets/images/portfolio/recommenders/gary-button.jpg);}
 	#sharif-macky:before {background-image: url(/assets/images/portfolio/recommenders/sharif-macky.jpg);}
