New recommendation added

--- a/dev/assets/scss/site.scss
+++ b/dev/assets/scss/site.scss
@@ -312,6 +312,7 @@ blockquote {
 		}
 	}
 
+	#veronica-zotali:before {background-image: url(/assets/images/portfolio/recommenders/veronica-zotali.jpg);}
 	#alex-kickham:before {background-image: url(/assets/images/portfolio/recommenders/alex-kickham.jpg);}
 	#adam-scott:before {background-image: url(/assets/images/portfolio/recommenders/adam-scott.jpg);}
 	#eren-gokcek:before {background-image: url(/assets/images/portfolio/recommenders/eren-gokcek.jpg);}
